# gltutorial

./: .clang-format  .gitignore  CMakeLists.txt  README.md
content/ru/: index.md
content/ru/tutorials/: 01_hello_window.md  02_hello_opengl.md
source/: CMakeLists.txt
source/01_hello_window/: main.cpp
source/02_hello_opengl/: main.cpp
